<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="party_setting_cover_name">派对封面</string>
    <string name="party_setting_name">派对名称</string>
    <string name="party_setting_even_the_wheat_scenario">连麦场景</string>
    <string name="party_setting_the_male_screen">关闭公屏</string>
    <string name="party_setting_mode">上麦模式</string>
    <string name="party_setting_upmai_mode">上麦模式</string>
    <string name="party_setting_com">派对公告</string>
    <string name="party_setting_edit">编辑</string>
    <string name="party_setting_bg">派对背景</string>
    <string name="unknown">未知</string>
    <string name="party_function">功能</string>
    <string name="party_play_method">玩法</string>
    <string name="special_effects_party_gift_hind">开启后,将为您屏蔽派对内所有的送礼特效</string>
    <string name="special_effects_party_hind">开启后,将为您屏蔽派对内座驾的播放特效</string>
    <string name="special_effects_party_gift_hind2">屏蔽后,房间里的礼物特效会被屏蔽, 是否确认进行屏蔽</string>
    <string name="special_effects_party_hind2">屏蔽后,房间里的座驾特效会被屏蔽, 是否确认进行屏蔽</string>
</resources>